--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -3,10 +3,9 @@
 <%= form_for(@schedule, :url => project_schedules_path(@project.id)) do |f| %>
   <div>
     <%= @project.name %>
-    <%= f.hidden_field :project_id, :value => @project.id %>
   </div>
   <div>
-    <%= collection_select(:developer_projects, :developer_id, @developers, :id, :name) %>
+    <%= f.collection_select(:developer_id, @developers, :id, :name) %>
   </div>
   <div>
     <%= f.label :start_date %>
