--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -5,4 +5,5 @@
 <% end %>
 </ul>
 
-<br><%= link_to "new", new_developer_path %>
+<%= link_to "Add new developer", new_developer_path %> |
+<%= link_to "Back to board", root_path %>
