--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,4 +5,5 @@
 <% end %>
 </ul>
 
-<br><%= link_to "new", new_project_path %>
+<%= link_to "Add new project", new_project_path %> |
+<%= link_to "Back to board", root_path %>
