--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,19 +1,3 @@
 <h1>Add Developer to a Project</h1>
 
-<%= form_for(@schedule, :url => project_schedules_path(@project.id)) do |f| %>
-  <div>
-    <%= @project.name %>
-  </div>
-  <div>
-    <%= f.collection_select(:developer_id, @developers, :id, :name) %>
-  </div>
-  <div>
-    <%= f.label :start_date %>
-    <%= f.date_select("start_date") %>
-  </div>
-  <div>
-    <%= f.label :end_date %>
-    <%= f.date_select("end_date") %>
-  </div>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
