Done edit schedule

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
       <%= schedule.developer_name %>
          <%= schedule.start_date %>
          <%= schedule.end_date %>
-         <%# link_to "edit", edit_project_schedule_path(@project) %>
+         <%= link_to "edit", edit_project_schedule_path(@project) %>
 
       </li>
    <% end %>
