--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@schedule, :url => project_schedules_path(@project.id)) do |f| %>
+<%= form_for(@schedule, :url => @url) do |f| %>
    <div>
       <%= @project.name %>
    </div>
