--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,10 @@
 <h1>All Projects</h1>
 <ul>
-<% @projects.each do |project| %>
-  <li><%= project.name %> | <%= link_to "edit", edit_project_path(project) %> | <%= link_to "show", project_path(project) %> | <%= link_to "Add Developers", new_project_schedule_path(:project_id => project.id) %> </li>
-<% end %>
+   <% @projects.each do |project| %>
+      <li><%= project.name %> | <%= link_to "edit", edit_project_path(project) %>
+         | <%= link_to "show", project_path(project) %>
+         | <%= link_to "Add Developers", new_project_schedule_path(:project_id => project.id) %> </li>
+   <% end %>
 </ul>
 
 <%= link_to "Add new project", new_project_path %> |
